--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
       <!-- Botão para reiniciar o jogo -->
       <button class="reiniciar">REINICIAR</button>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
