nao reinicia e console em loop infinito (????)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Estilos CSS para a página -->
     <link rel="stylesheet" href="estilo.css" />
     <!-- Script JavaScript assíncrono para a página -->
-    <script src="script.js" defer></script>
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <!-- Container principal para o jogo -->
@@ -34,6 +34,5 @@
       <!-- Botão para reiniciar o jogo -->
       <button class="reiniciar">REINICIAR</button>
     </div>
-    <script src="./script.js"></script>
   </body>
 </html>
