--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Imagem do cano no jogo -->
       <img src="assets/imgs/cano.png" class="cano" />
     </div>
-
+    <h1 class="pontos">Pontuação: 0</h1>
     <!-- Container para a tela de fim de jogo -->
     <div class="fim-de-jogo">
       <!-- Botão para reiniciar o jogo -->
